--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,18 +42,28 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
       - name: Set version
         run: ./mvnw --batch-mode versions:set versions:commit -DnewVersion="${VERSION}" -DprocessAllModules=true
-      - name: Deploy release
-        env:
-          MAVEN_CENTRAL_USERNAME: ${{ secrets.SONATYPE_USER }}
-          MAVEN_CENTRAL_TOKEN: ${{ secrets.SONATYPE_PASSWORD }}
-          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-        run: ./mvnw --batch-mode clean license:format deploy
       - name: Commit and tag new version
         run: |
           git config user.name "Talsma CI"
           git config user.email "ci-user@talsma-ict.nl"
           git commit -sam "Release: Set project version to ${VERSION}"
           git tag -m "Release version ${VERSION}" "${VERSION}"
+          git push --follow-tags
+      - name: Deploy release
+        env:
+          MAVEN_CENTRAL_USERNAME: ${{ secrets.SONATYPE_USER }}
+          MAVEN_CENTRAL_TOKEN: ${{ secrets.SONATYPE_PASSWORD }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+#        run: ./mvnw --batch-mode clean license:format deploy
+        run: ./mvnw --batch-mode clean license:format verify
+      - name: Create Github release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ env.VERSION }}
+          name: Release ${{ env.VERSION }}
+          draft: true
+          files: |
+            target/*.jar
       - name: Set next snapshot version
         run: |
           read base minor suffix <<<$(echo "${VERSION}" | perl -pe 's/^(.*?)([0-9]+)([^0-9]*)$/\1 \2 \3/')
