--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,8 +54,7 @@ jobs:
           MAVEN_CENTRAL_USERNAME: ${{ secrets.SONATYPE_USER }}
           MAVEN_CENTRAL_TOKEN: ${{ secrets.SONATYPE_PASSWORD }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-#        run: ./mvnw --batch-mode clean license:format deploy
-        run: ./mvnw --batch-mode clean license:format verify
+        run: ./mvnw --batch-mode clean license:format deploy
       - name: Create Github release
         uses: softprops/action-gh-release@v2
         with:
@@ -64,6 +63,9 @@ jobs:
           draft: true
           files: |
             target/*.jar
+            target/*.jar.asc
+            target/*.jar.md5
+            target/*.jar.sha512
       - name: Set next snapshot version
         run: |
           read base minor suffix <<<$(echo "${VERSION}" | perl -pe 's/^(.*?)([0-9]+)([^0-9]*)$/\1 \2 \3/')
@@ -74,4 +76,4 @@ jobs:
       - name: Create post-release merge request
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: gh pr create -B main -H ${BRANCH} --title 'Merge release to main branch' --body 'Created by Github action'
+        run: gh pr create -B main -H ${BRANCH} --title "Merge release ${VERSION} to main branch" --body 'Created by Github action'
