--- a/pom.xml
+++ b/pom.xml
@@ -347,7 +347,7 @@
                         <configuration>
                             <publishingServerId>central</publishingServerId>
                             <autoPublish>true</autoPublish>
-                            <waitUntil>published</waitUntil>
+                            <!--<waitUntil>published</waitUntil>-->
                         </configuration>
                     </plugin>
                 </plugins>
